--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
   
   
   .coverpg {
-    background-image: url(/Assets/bg.jpg);
+    background-image: url(../Assets/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
