--- a/style.css
+++ b/style.css
@@ -104,6 +104,9 @@ margin-top: 100vh;
       
 
     }
+    .whatwedo{
+      height: 120vh;
+    }
   
     .navbar a {
       display:block; 
@@ -113,6 +116,7 @@ margin-top: 100vh;
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
+     
     }
   }
 .cards{
@@ -122,11 +126,12 @@ margin-top: 100vh;
   align-items: center;
   flex-wrap: wrap;
   gap: 20px; 
-  padding: 20px;
+  padding: 15px;
   box-sizing: border-box;
 }
 .card1, .card2, .card3 {
-  border: rgb(255, 255, 255) 2px solid;
+  background-color: whitesmoke;
+  border: rgb(0, 0, 0) 4px solid;
   border-radius: 10px;
   overflow: hidden;
   width: 325px;
@@ -135,6 +140,22 @@ margin-top: 100vh;
   margin: 10px;
   box-sizing: border-box;
 }
+
+.cards h1{
+  text-align: center;
+}
+
+.cards p{
+  padding-top: 6vh;
+  text-align: center;
+  font-size: 20px;
+} 
+.serhead{
+  display: block;
+  text-align: center;
+  padding-top: 5%;
+}
+
 
 
 
