--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
   .navbar a {
     color: white;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 1.5rem;
     text-align: center;
   }
   
@@ -88,22 +88,24 @@
   }
   
   .container1 a:hover {
-    background-color: #557975;
-    color: black;
+    background-color: #557975bd;
+    color: #000000;
   }
   
 .whatwedo {
 position: relative;
-background-color: #557975d3;
+background-color: #557975a7;
 width: 100%;
 height: 100vh;
 margin-top: 100vh;
-
+transition: background-color 0.5s ease-in-out;
+}
+.whatwedo h2{
+  transition: background-color 0.5s ease-in-out;
 }
 .serpara:hover{
   color: #ffffff;
-  text-shadow: 0 0 3px #dcbfff;
-  letter-spacing: 0.5px;
+
   cursor: pointer;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
@@ -114,6 +116,20 @@ margin-top: 100vh;
   padding-left: 25px;
   padding-right:25px;
   
+}
+.serhead:hover{
+  color: #ffffff;
+
+  letter-spacing: 1.5px;
+  cursor: pointer;
+  transition: ease-in-out;
+}
+.serhead{
+  font-size: 6vh;
+  transition: all 0.3s ease-in-out;
+  display: block;
+  text-align: center;
+  padding-top: 5%;
 }
 
 .cards{
@@ -147,18 +163,6 @@ margin-top: 100vh;
   text-align: center;
   font-size: 20px;
 } 
-.serhead:hover{
-  color: #ffffff;
-  text-shadow: 0 0 3px #00000099;
-  letter-spacing: 0.5px;
-  cursor: pointer;
-}
-.serhead{
-  transition: all 0.3s ease-in-out;
-  display: block;
-  text-align: center;
-  padding-top: 5%;
-}
 .card1 a:hover,
 .card2 a:hover,
 .card3 a:hover{
@@ -252,9 +256,45 @@ margin-top: 100vh;
 }
 
 
+ .blob {
+  background-color: #fbececae;
+} 
+.page2{
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  background-color: #000000;
+  overflow: hidden;
+}
 
-
-
+.video-container{
+  position: absolute;
+  width: 100vh;
+  height: 100vh;
+ 
+}
+.page2 h1{
+  font-family: SF Pro text;
+  position: absolute;
+  top: 25%;
+  margin-left: 4vh;
+  /* height: 40vh; */
+  border:white 4px solid;
+  border-radius: 50px;
+  padding: 4vh;
+  color: white;
+  font-size: 4rem;
+  backdrop-filter: blur(10px);
+}
+.page2 h1 p{
+  font-size: 2rem;
+  padding-top: 1vh;
+}
+.page3{
+  width: 100%;
+  min-height: 100vh;
+  background-color: rgb(255, 255, 255);
+}
 
 
 
